fixed positioning of nav bar and logo on mobile and desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,12 @@
     border: none;
 }
 
-.header{
+.header {
     background-color: white;
     box-shadow: 1px 1px 5px 0px grey;
     position: sticky;
-    top: 0;
     width: 100%;
+    height: auto;
 }
 
 body {
@@ -32,37 +32,34 @@ h1, h2 {
 #logo-image {
     width: 50%;
     margin-left: 10px;
-    margin-top: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
-#logo-text2 {
-    font-family: 'Yellowtail', cursive;
-    text-transform: none;
-    text-decoration: none;
-}
+/* Nav bar (burger style) */
 
-.nav{
+.nav {
     width: 100%;
     height: 100%;
-    position: fixed;
     overflow: hidden;
+    margin-left: 10%;
 }
 
 .menu {
     background-color: #88d498;
 }
 
-.menu a{
-    display: block;
+.menu a {
+    display: flex;
     padding: 30px;
     color: white;
     text-decoration: none;
-    text-align: center;
     font-weight: 1000;
     border-bottom: 2px solid #198a68;
+    
 }
 
-.menu a:hover{
+.menu a:hover {
     background-color: #caeed2;
     color: #3a3a3a;
 }
@@ -88,6 +85,7 @@ h1, h2 {
 
 } /* Style span tag */
 
+/* defining the hamburger icon*/
 
 .hamburger-line::before,
 .hamburger-line::after {
@@ -99,10 +97,12 @@ h1, h2 {
     transition: all .2s ease-out;
     width: 100%;
 }
-.hamburger-line::before{
+
+.hamburger-line::before {
     top: 5px;
 }
-.hamburger-line::after{
+
+.hamburger-line::after {
     top: -5px;
 }
 
@@ -111,17 +111,70 @@ h1, h2 {
 }
 
 /* Toggle menu icon */
-.side-menu:checked ~ nav{
+.side-menu:checked ~ nav {
     max-height: 100%;
 }
+
 .side-menu:checked ~ .hamburger .hamburger-line {
-    background: white;
+    background: transparent;
 }
+
 .side-menu:checked ~ .hamburger .hamburger-line::before {
     transform: rotate(-45deg);
     top:0;
 }
+
 .side-menu:checked ~ .hamburger .hamburger-line::after {
     transform: rotate(45deg);
     top:0;
+}
+
+/* Media queries */
+
+/* for nav */
+@media (min-width: 768px) {
+
+    .header {
+        width: 100%;
+        display: flex;
+    }
+    
+    #logo-image {
+        margin-left: 20%;
+        width: 75%;
+    }
+    
+    .nav {
+        max-height: none;
+        width: 100%;
+        top: 0;
+        background-color: transparent;
+    }
+
+    .menu {
+        background-color: transparent;
+        text-decoration: none;
+        display: flex;
+        justify-content: flex-end;
+        margin-right: 10%;
+        margin-top: 10px;
+    }
+
+    .menu li a{
+        color: #252525;
+        border: none;
+    }
+    
+    .menu li {
+        list-style-type: none;
+    }
+    .menu a:hover {
+        background-color: transparent;
+        color: gray;
+
+    }
+
+    .hamburger {
+        display: none;
+    }
 }
